2008-03-31  Brady Eidson  <beidson@apple.com>

Reviewed by Mitz Pettel

        Fix for http://bugs.webkit.org/show_bug.cgi?id=18183

        Despite the bug reporter's instructions, I have still not been able to actually reproduce this crash and
        therefore don't know how to make a layout test for it.

        * loader/archive/ArchiveResource.cpp:
        (WebCore::ArchiveResource::response): Fix potential null dereference



Canonical link: https://commits.webkit.org/25102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31467 268f45cc-cd09-0410-ab3c-d52691b4dbfc